change thumbnail image

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Thay đổi thumbnail ảnh khi share link (đổi link img = link ảnh) -->
+    <meta property="og:image" content="link img" />
     <title>Bong bóng kích nổ</title>
     <link rel="stylesheet" href="./assets/style.css" />
     <link
@@ -40,7 +42,7 @@
         </div>
         <div class="col-6">
           <!-- <img src="./assets/images/1.webp" class="img-fluid img_css_header" alt="..." /> -->
-          <video class="img-fluid img_css_header" loop="" autoplay="">
+          <video class="img-fluid img_css_header" loop="" autoplay="true">
             <source src="./assets/images/bongbongbay4.mov">
         </video>
         </div>
